# interop-empty

./: CMakeLists.txt  README.md  emptyinterop.c  emptyinterop.h
linux/: empty.def  empty.map  empty.qbs  emptyinterop.qbs
mac/empty.xcodeproj/: project.pbxproj
mac/emptyinterop.xcodeproj/: project.pbxproj
windows/: empty.def  empty.sln  empty.vcxproj  empty.vcxproj.filters  emptyinterop.sln  emptyinterop.vcproj  emptyinterop.vcxproj  emptyinterop.vcxproj.filters  resource.rc
